Use ByteBuddy in unit tests to avoid having to add add-opens to unit tests